--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,15 @@
       ]
     },
     {
+      "source": "/(.*\\.(js|css|woff|woff2|ttf|otf))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/metodox/(.*\\.webp)",
       "headers": [
         {
@@ -40,6 +49,15 @@
         {
           "key": "Content-Type",
           "value": "image/webp"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(png|jpg|jpeg|svg|gif|ico))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
